--- a/index.html
+++ b/index.html
@@ -1,25 +1,106 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Portafolio de proyectos" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
-      integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="css/style.css" />
-    <title>Mi portafolio</title>
-  </head>
-  <body>
-    <main></main>
 
-    <footer class="main-footer"></footer>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Portafolio de proyectos" />
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
+    integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous" />
+  <link rel="stylesheet" href="css/style.css" />
+  <title>Mi portafolio</title>
+</head>
+
+<body>
+  <main>
+    <header>
+      <nav class="navbar">
+        <div class="nav-container">
+          <div class="logo">
+            <a href="index.html">Luis Montes.</a>
+          </div>
+          <ul id="main-nav" class="txt-btn">
+            <li><a href="index.html" class="current">Detailing.</a></li>
+            <li><a href="serviciosbasicos.html">Servicios básicos.</a></li>
+            <li><a href="serviciosdeinterior.html">Servicios de interior.</a></li>
+            <li><a href="serviciosdetallado.html">Servicios detallado.</a></li>
+            <li><a href="contact.html">Contacto</a></li>
+          </ul>
+        </div>
+      </nav>
+
+      <section class="banner-header">
+        <!-- <div class="banner-header-text">
+          <a href="" download>
+            <button class="btn">Descargar CV</button>
+          </a>
+        </div> -->
+      </section>
+    </header>
+    <section class="section portafolio">
+      <div class="container">
+        <div class="section-header">
+          <h3 class="title" date-title="mis proyctos">NanoCars Detailing.</h3>
+        </div>
+
+        <div class="box">
+          <a href="proyect-1.html">
+            <img src="img/portfolio/nanocars.jpeg" alt="proyecto número 1">
+          </a>
+          <h3>Quien Somos.</h3>
+        </div>
+
+        <div class="box">
+          <a href="proyect-2.html">
+            <img src="img/portfolio/Deja-tu-auto-como-nuevo.jpg" alt="proyecto número 2">
+          </a>
+          <h3>Cursos Detailing.</h3>
+        </div>
+
+        <div class="box">
+          <a href="proyect-3.html">
+            <img src="img/portfolio/serviciotaller.jpeg" alt="proyecto número 3">
+          </a>
+          <h3>Polarizados
+            de alta tecnología.</h3>
+        </div>
+      </div>
+    </section>
+
+    <section class="section hireme">
+      <div class="container">
+        <div class="section-header">
+          <h3 class="title" data-title="Escribeme">
+            Contamos con excelentes profesionales para asesorarte.
+          </h3>
+        </div>
+        <p class="text">
+          Nuestro objetivo es que tu automóvil luzca como nuevo.
+        </p>
+
+        <a href="https://wa.me/+573004729062" class="btn whatsApp" target="_blank"><img src="img/portfolio/iconwsspredondo.png"></a>
+      </div>
+    </section>
+  </main>
+  <hr />
+  <footer class="main-footer">
+    <div class="container">
+      <p class="small">Portafolio 2024</p>
+      <ul>
+        <li>
+          <a href="#"><i class="fab fa-facebook"></i></a>
+        </li>
+        <li>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+        </li>
+        <li>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+        </li>
+
+      </ul>
+    </div>
+  </footer>
+</body>
+
 </html>
